# ocl_with_shared_pointers

./: CMakeLists.txt  main.cpp
